Feature: register course and list course.

--- a/views/course/show.ejs
+++ b/views/course/show.ejs
@@ -53,14 +53,14 @@
           <div style="width: 100%; text:center;">
             <h1>Curso</h1>
           </div>
-          <div class="row">
+          <div> 
             <h2><%= course.code %></h2>
           </div>
           <div>
             <h3><strong>Carga horária: </strong><%= course.ch %></h3>
           </div>
           <div>
-            <h3><strong>Categoria: </strong><%= course.category_id %></h3>
+            <h3><strong>Categoria: </strong><%= course.category %></h3>
           </div>
           <div>
             <h3><strong>Descrição: </strong><%= course.description %></h3>
