--- a/views/course/index.ejs
+++ b/views/course/index.ejs
@@ -34,17 +34,17 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">College</a>
+          <a class="navbar-brand" href="/courses">College</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
-            <li><a href="#">Link</a></li>
+            <li class="active"><a href="/courses">Home</a></li>
+            <li><a href="/course/new">Novo Curso</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#">Link</a></li>
+            <li><a href="#">Log out</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
@@ -55,11 +55,20 @@
           <div class="page-title">
             <h1>Cursos cadastrados</h1>
           </div>
-          <div class="list-group">
-            <% courses.forEach(function(course) { %>
-              <a href="/course/<%= course.$loki  %>" class="list-group-item"><%= course.code %></a>
-            <% }) %>
-          </div>
+            <% if(typeof courses !== 'undefined') { %>
+              <div class="list-group">
+                <% courses.forEach(function(course) { %>
+                  <a href="/course/<%= course.$loki  %>" 
+                    class="list-group-item">
+                    <%= course.code %>
+                  </a>
+                <% }) %>
+              </div>
+            <% } else { %>
+              <div class="page-title">
+                <h2>Nenhum curso cadastrado!!!</h2>
+              </div>
+            <% } %>
         </div>
       </div>
     </div>
