--- a/views/course/new.ejs
+++ b/views/course/new.ejs
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Bootstrap 101 Template</title>
+    <title>College</title>
 
     <!-- Bootstrap -->
     <!-- Latest compiled and minified CSS -->
@@ -47,7 +47,7 @@
             <li class="active"><a href="/course/new">Novo Curso</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#">Log out</a></li>
+            <li><a href="/logout">Log out</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
