--- a/views/security/signup.ejs
+++ b/views/security/signup.ejs
@@ -9,12 +9,15 @@
 
     <!-- Bootstrap -->
     <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" 
+                           integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
     <!-- Optional theme -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-    
-    <link rel="stylesheet" href="stylesheets/style.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" 
+                           integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="/stylesheets/style.css">
+
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -40,42 +43,43 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="/courses">Home</a></li>
-            <li><a href="/course/new">Novo Curso</a></li>
-          </ul>
-          <ul class="nav navbar-nav navbar-right">
-            <li><a href="/logout">Log out</a></li>
+            <li><a href="/login">Log in</a></li>
+            <li class="active"><a href="/signup">Sign Up</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
     </nav>
     <div class="container">
       <div class="row">
-        <div class="col-md-offset-2 col-md-8">
-          <div class="page-title">
-            <h1>Cursos cadastrados</h1>
+        <div class="col-md-offset-4 col-md-4">
+          <div class="page-tilte">
+            <h1>Sign up</h1>
           </div>
-            <% if(typeof courses !== 'undefined') { %>
-              <div class="list-group">
-                <% courses.forEach(function(course) { %>
-                  <a href="/course/<%= course.$loki  %>" 
-                    class="list-group-item">
-                    <%= course.code %>
-                  </a>
-                <% }) %>
-              </div>
-            <% } else { %>
-              <div class="page-title">
-                <h2>Nenhum curso cadastrado!!!</h2>
-              </div>
-            <% } %>
+          <form action="/signup" method="post">
+            <div class="form-group">
+              <label for="email">Email</label>
+              <input type="email" class="form-control" id="email" name="email" require> 
+            </div>
+            <div class="form-group">
+              <label for="password">Senha</label>
+              <input type="password" class="form-control" 
+                                     id="password" name="password" require> 
+            </div>
+            <div class="form-group">
+              <label for="password_confirmation">Confirme a senha</label>
+              <input type="password" class="form-control" 
+                      id="password_confirmation" name="password_confirmation" require> 
+            </div>
+
+            <button type="submit" class="btn btn-primary">Cadastrar</button>
+          </form>
         </div>
       </div>
     </div>
-    <script src="https://code.jquery.com/jquery-3.1.1.min.js"
-            integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
-            crossorigin="anonymous"></script>
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
   </body>
-</html>
+  <
